--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yelpcamp",
-  "version": "1.0.0",
+  "name": "pandareview",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
